Add Firebase to the index page

--- a/app/index.html
+++ b/app/index.html
@@ -187,6 +187,9 @@
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular-route.min.js"></script>
 
+    <script src="lib/firebase.js"></script>
+    <script src="lib/angularfire.min.js"></script>
+
     <!-- UI Bootstrap CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap.min.js"></script>
 
