Create CSS files

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.orange-indigo.min.css" />
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
 
+    <!-- CSS files -->
+    <link href="css/app.css">
+    <link href="css/index.css">
+
     <!-- Customized libraries shared by pages -->
     <script src="js/site.js"></script>
 </head>
