--- a/app/login.html
+++ b/app/login.html
@@ -32,8 +32,8 @@
 <body ng-app="teamform-login-app">
     <div ng-controller="LoginCtrl">
         <form>
-            <md-button class="md-raised">Login</md-button>
-            <md-button class="md-raised">Logout</md-button>
+            <md-button class="md-raised" ng-click="login()">Login</md-button>
+            <md-button class="md-raised" ng-click="logout()">Logout</md-button>
         </form>
     </div>
 
