Bind database data to the list

--- a/app/index.html
+++ b/app/index.html
@@ -114,18 +114,8 @@
         <div id="event-list">
             <md-content layout-padding>
                 <md-list ng-cloak>
-                    <md-list-item class="secondary-button-padding">
-                        <p>Event 1</p>
-                        <md-button class="md-secondary">Edit</md-button>
-                    </md-list-item>
-                    <md-divider></md-divider>
-                    <md-list-item class="secondary-button-padding">
-                        <p>Event 2</p>
-                        <md-button class="md-secondary">Edit</md-button>
-                    </md-list-item>
-                    <md-divider></md-divider>
-                    <md-list-item class="secondary-button-padding">
-                        <p>Event 3</p>
+                    <md-list-item class="secondary-button-padding" ng-repeat="(eventKey, eventValue) in events">
+                        <p>{{eventKey}}</p>
                         <md-button class="md-secondary">Edit</md-button>
                     </md-list-item>
                     <md-divider></md-divider>
