Link with the event list

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -31,7 +31,7 @@
 </head>
 <body ng-app="teamform-eventteam-app">
     <div ng-controller="EventTeamCtrl">
-
+        <h1>{{eventName}}</h1>
     </div>
 
 
