Link with the admin page for editing

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -32,6 +32,8 @@
 <body ng-app="teamform-eventteam-app">
     <div ng-controller="EventTeamCtrl">
         <h1>{{eventName}}</h1>
+
+        <md-button class="md-raised" ng-href="admin.html?q={{eventName}}">Edit</md-button>
     </div>
 
 
