--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,7 @@
                 <md-list ng-cloak>
                     <md-list-item class="secondary-button-padding" ng-repeat="(eventKey, eventValue) in events">
                         <a ng-href="eventteam.html?event={{eventKey}}">{{eventKey}}</a>
-                        <md-button class="md-secondary" ng-click="editEvent(eventKey)">Edit</md-button>
+                        <md-button class="md-secondary" ng-href="admin.html?q={{eventKey}}">Edit</md-button>
                     </md-list-item>
                     <md-divider></md-divider>
                 </md-list>
