--- a/app/about.html
+++ b/app/about.html
@@ -28,8 +28,8 @@
     <!-- Customized libraries shared by pages -->
     <script src="js/site.js"></script>
 </head>
-<body>
-    <div ng-app="teamform-about-app" ng-controller="AboutCtrl">
+<body ng-app="teamform-about-app">
+    <div ng-controller="AboutCtrl">
         <div class="navbar-wrapper">
             <div class="container">
                 <nav class="navbar navbar-static-top navbar-default">
