Request joining a team from the team list

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -45,7 +45,7 @@
                         </md-card-title-text>
                     </md-card-title>
                     <md-card-actions layout="row" layout-align="end center">
-                        <md-button>Request</md-button>
+                        <md-button ng-click="requestTeam(teamKey)">Request</md-button>
                         <md-button ng-href="team.html?q={{eventName}}">Edit</md-button>
                     </md-card-actions>
                 </md-card>
