--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -46,7 +46,7 @@
                     </md-card-title>
                     <md-card-actions layout="row" layout-align="end center">
                         <md-button ng-click="requestTeam(teamKey)">Request</md-button>
-                        <md-button ng-href="team.html?q={{eventName}}">Edit</md-button>
+                        <md-button ng-href="team.html?event={{eventName}}&team={{teamKey}}">Edit</md-button>
                     </md-card-actions>
                 </md-card>
             </md-content>
