Add FAB for creating a new event

--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,8 @@
             </md-content>
         </div>
 
+        <md-button ng-click="createEvent($event)" class="md-fab" aria-label="create event"><span class="glyphicon glyphicon-plus"></span></md-button>
+
         <!-- Marketing messaging and featurettes
         ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
