Add FAB for creating a new team

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -51,6 +51,8 @@
                 </md-card>
             </md-content>
         </div>
+
+        <md-button ng-click="createTeam($event)" class="md-fab" aria-label="create team"><span class="glyphicon glyphicon-plus"></span></md-button>
     </div>
 
 
