--- a/app/admin.html
+++ b/app/admin.html
@@ -44,17 +44,42 @@
                 <div class="col-md-8 col-xs-8 text-left panel">
                     <strong>Minimum Team Size:</strong>
                     <span class="badge">
-                    {{param.minTeamSize}}</span>
+                        {{param.minTeamSize}}</span>
                     <button><span class="glyphicon glyphicon-plus" ng-click="changeMinTeamSize(1);"></span></button>
                     <button><span class="glyphicon glyphicon-minus" ng-click="changeMinTeamSize(-1);"></span></button>
                     <br><br>
                     <strong>Maximum Team Size: </strong>
                     <span class="badge">
-                    {{param.maxTeamSize}}</span>
+                        {{param.maxTeamSize}}</span>
                     <button><span class="glyphicon glyphicon-plus" ng-click="changeMaxTeamSize(1);"></span></button>
                     <button><span class="glyphicon glyphicon-minus" ng-click="changeMaxTeamSize(-1);"></span></button>
                     <br><br>
                     <button type="button" class="btn btn-primary" ng-click="saveFunc();" >Create/Modify</button>
+                    <!-- Datepicker -->
+                    <br><br>
+                    <div class="row" ng-cloak>
+                        <div layout-gt-xs="row">
+                            <div flex-gt-xs>
+                                <h4>Start Date: </h4>
+                                <md-datepicker ng-model="startDate" md-placeholder="Enter date"></md-datepicker>
+                            </div>
+
+                            <div flex-gt-xs>
+                                <h4>End Date: </h4>
+                                <md-datepicker ng-model="endDate" md-placeholder="Enter date"></md-datepicker>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <button type="button" class="btn btn-primary" ng-click="saveDate()" >Save Date</button>
+                    <br><br>
+                    <!-- TextArea -->
+                    <md-input-container class="md-block">
+                        <label>Details: </label>
+                        <textarea ng-model="details" md-maxlength="150" rows="2" md-select-on-focus></textarea>
+                    </md-input-container>
+                    <button type="button" class="btn btn-primary" ng-click="saveContent()" >Save Details</button>
+
                 </div>
                 <div class="col-md-2 col-xs-2"></div>
             </div>
