--- a/app/admin.html
+++ b/app/admin.html
@@ -61,24 +61,23 @@
                         <div layout-gt-xs="row">
                             <div flex-gt-xs>
                                 <h4>Start Date: </h4>
-                                <md-datepicker ng-model="startDate" md-placeholder="Enter date"></md-datepicker>
+                                <md-datepicker ng-model="startDate" ng-required="true" md-placeholder="Enter date"></md-datepicker>
                             </div>
 
                             <div flex-gt-xs>
                                 <h4>End Date: </h4>
-                                <md-datepicker ng-model="endDate" md-placeholder="Enter date"></md-datepicker>
+                                <md-datepicker ng-model="endDate" ng-required="true" md-placeholder="Enter date"></md-datepicker>
                             </div>
                         </div>
                     </div>
                     <br>
-                    <button type="button" class="btn btn-primary" ng-click="saveDate()" >Save Date</button>
                     <br><br>
                     <!-- TextArea -->
                     <md-input-container class="md-block">
                         <label>Details: </label>
-                        <textarea ng-model="details" md-maxlength="150" rows="2" md-select-on-focus></textarea>
+                        <textarea ng-model="details" ng-required="true" md-maxlength="150" rows="2" md-select-on-focus></textarea>
                     </md-input-container>
-                    <button type="button" class="btn btn-primary" ng-click="saveContent()" >Save Details</button>
+                    <button type="submit" class="btn btn-primary" ng-click="saveContent()" >Submit</button>
 
                 </div>
                 <div class="col-md-2 col-xs-2"></div>
