Change the padding style

--- a/app/admin.html
+++ b/app/admin.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <div class="text-center">
                         <div class="row">
                             <div class="col-md-2 col-xs-2"></div>
