--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <div class="row">
                         <strong>
                         <div class="col-sm-4">Minumum Team Size: {{minTeamSize}}</div>
