--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <md-button ng-click="login()" ng-if="!user" class="md-raised">Login</md-button>
                     <md-button ng-click="logout()" ng-if="user" class="md-raised">Logout</md-button>
 
