--- a/app/team.html
+++ b/app/team.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <div>
                         <span>Preferred team size ({{minTeamSize}} - {{maxTeamSize}}): {{size}}</span>
                         <button ng-click="changeCurrentTeamSize(1)"><span class="glyphicon glyphicon-plus"></span></button>
