--- a/app/user.html
+++ b/app/user.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <div ng-if="user">
                         <h1>{{user.displayName}}</h1>
                         <h2>{{user.email}}</h2>
