--- a/app/about.html
+++ b/app/about.html
@@ -60,7 +60,7 @@
 
 
             <main class="mdl-layout__content">
-                <md-content ng-cloak layout-padding>
+                <md-content ng-cloak class="md-padding">
                     <!-- Marketing messaging and featurettes
                     ================================================== -->
                     <!-- Wrap the rest of the page in another container to center all the content. -->
