Pass the event name to the admin page as event

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -76,7 +76,7 @@
                     <strong>Details: {{details}}</strong>
                     <br>
 
-                    <md-button class="md-raised" ng-href="admin.html?q={{eventName}}">Edit</md-button>
+                    <md-button class="md-raised" ng-href="admin.html?event={{eventName}}">Edit</md-button>
 
 
                     <div id="team-list">
