--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
                             <md-list-item ng-repeat="(eventKey, eventValue) in events" ng-href="eventteam.html?event={{eventKey}}" class="secondary-button-padding">
                                 <span>{{eventKey}}</span>
                                 <md-button ng-click="joinEvent(eventKey)" class="md-secondary">Join</md-button>
-                                <md-button ng-href="admin.html?q={{eventKey}}" class="md-secondary">Edit</md-button>
+                                <md-button ng-href="admin.html?event={{eventKey}}" class="md-secondary">Edit</md-button>
                             </md-list-item>
                         </md-list>
                     </div>
