Add skills input in the user page

--- a/app/user.html
+++ b/app/user.html
@@ -62,9 +62,28 @@
             <main class="mdl-layout__content">
                 <md-content ng-cloak class="md-padding">
                     <div ng-if="user">
-                        <h1>{{user.displayName}}</h1>
-                        <h2>{{user.email}}</h2>
-                        <img ng-src="{{user.photoURL}}" />
+                        <div>
+                            <h1>{{user.displayName}}</h1>
+                            <h2>{{user.email}}</h2>
+                            <img ng-src="{{user.photoURL}}" />
+                        </div>
+
+                        <div>
+                            <span>Skills:</span>
+                            <ul>
+                                <li ng-repeat="skill in skills">{{skill.$value}}</li>
+                            </ul>
+                        </div>
+
+                        <!-- skills input -->
+                        <form>
+                            <md-input-container>
+                                <label>Skills</label>
+                                <input id="skillInput" type="text" ng-model="$parent.skillInput" ng-required="true">
+                            </md-input-container>
+                            <br>
+                            <md-button type="submit" ng-click="addSkill()" class="md-raised">Add Skill</md-button>
+                        </form>
 
                         <md-card ng-repeat="(eventKey, eventValue) in userObj.events">
                             <md-card-title>
