Add filter and sorting switches

--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -61,6 +61,7 @@
 
             <main class="mdl-layout__content">
                 <md-content ng-cloak class="md-padding">
+                    <!-- event details -->
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6">Minumum Team Size: {{minTeamSize}}</div>
@@ -78,6 +79,16 @@
 
 
                     <div id="team-list">
+                        <!-- filter and sort switches -->
+                        <form>
+                            <md-switch ng-model="filterPlacesSwitch" ng-change="filterPlaces()">Teams with places left</md-switch>
+                            <md-switch ng-model="sortPlacesSwitch" ng-change="sortPlaces()">Sort by places left</md-switch>
+                            <md-switch ng-model="filterSkillsMatchSwitch" ng-change="filterSkillsMatch()">Teams that match my skills</md-switch>
+                            <md-switch ng-model="sortSkillsMatchSwitch" ng-change="sortSkillsMatch()">Sort by the number of skills matched</md-switch>
+                        </form>
+
+
+                        <!-- teams -->
                         <md-card ng-repeat="(teamKey, teamValue) in teams">
                             <md-card-title>
                                 <md-card-title-text>
