Update the skills that a team have when adding a member

--- a/app/team.html
+++ b/app/team.html
@@ -74,6 +74,13 @@
                         <ul>
                     </div>
 
+                    <div>
+                        <span>Skills:</span>
+                        <ul>
+                            <li ng-repeat="teamSkill in teamSkills">{{teamSkill.$value}}</li>
+                        <ul>
+                    </div>
+
                     <form>
                         <md-input-container>
                             <label>Preferred skills</label>
