--- a/app/admin.html
+++ b/app/admin.html
@@ -113,7 +113,7 @@
                                 <h3>All teams:</h3>
                                 <ul ng-repeat="t in team">
                                     <li>
-                                        User ID: {{t.$id}}  <br>
+                                        Team name: <strong>{{t.$id}}</strong> <br>
                                         Preferred team size: <span class="badge">{{t.size}}</span> <br>
                                         Current team members: {{t.teamMembers}}
                                     </li>
