Try to fix the conflict

--- a/app/admin.html
+++ b/app/admin.html
@@ -116,7 +116,7 @@
                                         <div class="md-list-item-text">
                                             <h3><strong> {{t.$id}} </strong></h3>
                                             <h4>Preferred team size: <span class="badge">{{t.size}}</span></h4>
-                                            <h4>Current team members: {{t.teamMembers}} <span class="badge" ng-if="zeroMember(t.teamMembers)">{{0}}</span></h4>
+                                            <h4>Current team members: {{t.teamMembers}} <span class="badge" ng-if="zeroMember(t.teamMembers)">0</span></h4>
                                         </div>
                                         <md-divider ng-if="!$last"></md-divider>
                                     </md-list-item>
