--- a/app/eventteam.html
+++ b/app/eventteam.html
@@ -30,6 +30,7 @@
 
     <!-- Customized libraries shared by pages -->
     <script src="js/site.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body>
     <div ng-app="teamform-eventteam-app" ng-controller="EventTeamCtrl">
@@ -81,23 +82,21 @@
                     <div id="team-list">
                         <!-- filter and sort switches -->
                         <form>
-                            <md-switch ng-model="filterPlacesSwitch" ng-change="filterPlaces()">Teams with places left</md-switch>
-                            <md-switch ng-model="sortPlacesSwitch" ng-change="sortPlaces()">Sort by places left</md-switch>
-                            <md-switch ng-model="filterSkillsMatchSwitch" ng-change="filterSkillsMatch()">Teams that match my skills</md-switch>
-                            <md-switch ng-model="sortSkillsMatchSwitch" ng-change="sortSkillsMatch()">Sort by the number of skills matched</md-switch>
+                            <md-switch ng-model="filterPlacesSwitch" ng-change="filterSort(filterPlacesSwitch, filterSkillsMatchSwitch)">Teams with places left</md-switch>
+                            <md-switch ng-model="filterSkillsMatchSwitch" ng-change="filterSort(filterPlacesSwitch, filterSkillsMatchSwitch)">Teams that match my skills</md-switch>
                         </form>
 
 
                         <!-- teams -->
-                        <md-card ng-repeat="(teamKey, teamValue) in teams">
+                        <md-card ng-repeat="team in teams">
                             <md-card-title>
                                 <md-card-title-text>
-                                    <span class="md-headline">{{teamKey}}</span>
+                                    <span class="md-headline">{{team.name}}</span>
                                 </md-card-title-text>
                             </md-card-title>
                             <md-card-actions layout="row" layout-align="end center">
-                                <md-button ng-if="teamValue.currentTeamSize < teamValue.size" ng-click="requestTeam(teamKey)">Request</md-button>
-                                <md-button ng-href="team.html?event={{eventName}}&team={{teamKey}}">Edit</md-button>
+                                <md-button ng-if="team.currentTeamSize < team.size" ng-click="requestTeam(team.name)">Request</md-button>
+                                <md-button ng-href="team.html?event={{eventName}}&team={{team.name}}">Edit</md-button>
                             </md-card-actions>
                         </md-card>
                     </div>
