Display a popup dialog to confirm the automatic team form

--- a/app/admin.html
+++ b/app/admin.html
@@ -107,6 +107,9 @@
                             </div>
                             <div class="col-md-2 col-xs-2"></div>
                         </div>
+
+                        <md-button ng-click="automaticTeamForm()" class="md-raised">Automatic Team Form</md-button>
+
                         <hr>
                         <div layout="row" layout-align="space-around">
                             <md-content>
@@ -138,6 +141,12 @@
                     </div>
                 </md-content>
             </main>
+
+            <!-- toast -->
+            <div aria-live="assertive" aria-atomic="true" aria-relevant="text" class="mdl-snackbar mdl-js-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button type="button" class="mdl-snackbar__action"></button>
+            </div>
         </div>
     </div>
 
