Fixed format issue
- Fixed display format issue of “All members:” at the bottom of
admin.html.
- Display selected teams’ name instead of json object.
#101

--- a/app/admin.html
+++ b/app/admin.html
@@ -133,8 +133,11 @@
                                     <h3>All members:</h3>
                                     <md-list-item class="md-3-line" ng-repeat="m in member">
                                         <div class="md-list-item-text">
-                                            <h3><strong> {{m.name }} </strong></h3>
-                                            <h4>request to join the following teams: {{m.selection | json}}</h4>
+                                            <h3><strong> {{m.name}} </strong></h3>
+                                            <h4>request to join the following teams: </h4>
+                                            <div ng-repeat="selection in m.selection">
+                                                <h4>{{selection}}</h4>
+                                            </div>
                                         </div>
                                         <md-divider ng-if="!$last"></md-divider>
                                     </md-list-item>
