Fix all teams and members display (#125)
#101

--- a/app/admin.html
+++ b/app/admin.html
@@ -119,7 +119,10 @@
                                         <div class="md-list-item-text">
                                             <h3><strong> {{t.$id}} </strong></h3>
                                             <h4>Preferred team size: <span class="badge">{{t.size}}</span></h4>
-                                            <h4>Current team members: {{t.teamMembers}} <span class="badge" ng-if="zeroMember(t.teamMembers)">{{0}}</span></h4>
+                                            <h4>Current team members: <span class="badge" ng-if="zeroMember(t.teamMembers)">{{0}}</span></h4>
+                                            <div ng-repeat="member in t.teamMembers">
+                                                <h4>{{member.name}}</h4>
+                                            </div>
                                         </div>
                                         <md-divider ng-if="!$last"></md-divider>
                                     </md-list-item>
@@ -130,8 +133,11 @@
                                     <h3>All members:</h3>
                                     <md-list-item class="md-3-line" ng-repeat="m in member">
                                         <div class="md-list-item-text">
-                                            <h3><strong> {{m.name }} </strong></h3>
-                                            <h4>request to join the following teams: {{m.selection | json}}</h4>
+                                            <h3><strong> {{m.name}} </strong></h3>
+                                            <h4>request to join the following teams: </h4>
+                                            <div ng-repeat="selection in m.selection">
+                                                <h4>{{selection}}</h4>
+                                            </div>
                                         </div>
                                         <md-divider ng-if="!$last"></md-divider>
                                     </md-list-item>
